--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@upstash/redis": "^1.34.8",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "next": "15.3.1",
