--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.34.8",
+    "framer-motion": "^12.10.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "next": "15.3.1",
