--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,26 @@
 {
   "name": "AniMangaListo",
-  "short_name": "AniMangaListo",
+  "short_name": "AnimeList",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/public/icon192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/public/icon.png",
       "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/public/appleicon.png",
+      "sizes": "180x180",
       "type": "image/png"
     }
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
-  "start_url": "/"
+  "start_url": "/",
+  "orientation": "portrait"
 }
