--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "AniMangaListo",
-  "short_name": "AnimeList",
+  "short_name": "AniManga",
   "icons": [
     {
       "src": "/public/icon192x192.png",
