--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,7 +22,7 @@
   "theme_color": "#800080",
   "background_color": "#000000",
   "display": "standalone",
-  "start_url": "/",
+  "start_url": "/?utm_source=web_app_manifest",
   "orientation": "portrait",
   "scope": "/",
 
