--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 NEXT_PUBLIC_API_BASE_URL=https://api.jikan.moe/v4
+GITHUB_CLIENT=Ov23litYK9qFtdfZ8li4
+GITHUB_SECRET=2b6fe508ff4f224f50bb248a79338bbc28ff41ef
+NEXTAUTH_SECRET=jkditzshditz2028berlinayamberkokok
+GOOGLE_CLIENT_ID=596526255505-81d5s5crmr50p0jf0erodbtmgobccvpn.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+DATABASE_URL="postgresql://postgres:shionditz2028@localhost:5432/AniMangaListo?schema=public"
+NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
