--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.7.0",
     "@upstash/redis": "^1.34.8",
+    "chart.js": "^4.4.9",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.10.0",
+    "fs-extra": "^11.3.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.7.0",
     "quick-lru": "^7.0.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-slick": "^0.30.3",
