--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1",
-      "methods": ["GET", "POST", "DELETE"],
-      "headers": {
-        "cache-control": "no-store"
-      }
-    }
-  ]
+  "prerender": {
+    "exclude": ["/api/*"]
+  }
 }
