--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
-  "prerender": {
-    "exclude": ["/api/*"]
-  }
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1",
+      "methods": ["GET", "POST", "DELETE"],
+      "headers": {
+        "cache-control": "no-store"
+      }
+    }
+  ]
 }
