--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ GOOGLE_CLIENT_SECRET=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
 DATABASE_URL="postgresql://postgres:shionditz2028@localhost:5432/AniMangaListo?schema=public"
 NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dzavdyyla
+CLOUDINARY_API_KEY=216282997327177
+CLOUDINARY_API_SECRET=ZOi-zA6y0BjBi90oacRn5KpBXho
