--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@prisma/client": "^6.7.0",
     "@upstash/redis": "^1.34.8",
     "chart.js": "^4.4.9",
-    "formidable": "^3.5.4",
+    "cloudinary": "^2.6.1",
     "framer-motion": "^12.10.0",
     "fs-extra": "^11.3.0",
     "lodash": "^4.17.21",
